# esp32-slint-demo

./: Cargo.toml  README.md  build.rs
ui/: pexeso_game.slint
